# hathor-forge

./: .gitignore  CLAUDE.md  README.md  flake.nix  justfile  package-lock.json  package.json
.github/workflows/: build.yml
nix/: cpuminer.nix  hathor-core.nix
public/: openapi-fullnode.json  openapi-wallet.json
pyinstaller/: hathor-core.spec  hathor_entry.py
scripts/: build-cpuminer.sh  build-explorer.sh  build-hathor-core.sh  build-linux-docker.sh  build-wallet-headless.sh
specs/: nano-contracts.md
src/: App.tsx  index.css  swagger-theme.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: cpuminer-aarch64-apple-darwin  hathor-core-aarch64-apple-darwin
src-tauri/src/: lib.rs  main.rs  mcp.rs
src-tauri/wallet-headless-dist/: package.json
src/components/: SwaggerUI.tsx
src/components/ui/: badge.tsx  button.tsx
src/lib/: utils.ts
