[package]
name = "hathor-forge"
version = "0.1.0"
description = "A Ganache-like local blockchain for Hathor Network developers"
authors = ["Hathor Labs"]
edition = "2021"

[lib]
name = "hathor_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
